Wed Jan 01 02:22:20 2003  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* dln.c (init_funcname): get rid of gcc-3 -O3 warning.

	* eval.c (copy_node_scope): ditto.

	* error.c (err_snprintf): ditto.

	* file.c (rb_file_s_chmod): ditto.

	* hash.c (delete_if_i, each_value_i, each_key_i, each_pair_i,
	  envix): ditto.

	* io.c (rb_sysopen, rb_file_sysopen_internal): ditto.

	* process.c (security): ditto.

	* ext/socket/socket.c (tcp_s_gethostbyname, ip_s_getaddress):
	  ditto.

Tue Dec 31 20:23:25 2002  Akinori MUSHA  <knu@iDaemons.org>

	* configure.in: Improve OpenBSD support. [obtained from: OpenBSD
	  ports]

	* dln.c (FUNCNAME_PATTERN): Ditto.

	* ext/tcltklib/extconf.rb (find_tcl, find_tk): Look for both
	  lib{tcl,tk}M.N and lib{tcl,tk}MN on all platforms.  *BSD have
	  Tcl/Tk libraries named this way.

	* ext/socket/addrinfo.h (NI_MAXHOST): Define NI_MAXHOST and
	  NI_MAXSERV only if they are not defined yet.  This fixes build
	  on such platforms as OpenBSD.

Tue Dec 31 19:29:47 2002  Akinori MUSHA  <knu@iDaemons.org>

	* defines.h (FLUSH_REGISTER_WINDOWS): Add support for
	  FreeBSD/sparc64.  Now ruby builds fine and make test passes.

Tue Dec 31 04:55:05 2002  Akinori MUSHA  <knu@iDaemons.org>

	* ruby.1: mdoc'ify.

Tue Dec 24 17:29:58 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* stable version 1.6.8 released.

Mon Dec 23 23:49:36 2002  Akinori MUSHA  <knu@iDaemons.org>

	* lib/tempfile.rb: Embed Rdoc style comments.

	* lib/tempfile.rb: Add length as an alias for size.

	* lib/tempfile.rb: Add Tempfile#close!() as a shorthand for
	  Tempfile#close(true).

	* lib/tempfile.rb: Add Tempfile#{unlink,delete}().

Sun Dec 22 00:36:43 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): accept pure ruby libraries.

Fri Dec 20 19:35:37 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/extmk.rb.in: get rid of --no-undefined option in $DLDFLAGS.

Wed Dec 18 17:53:05 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>
